Calculate mmr
